--- a/Proyecto/app/src/main/res/layout/fragment_seccion1.xml
+++ b/Proyecto/app/src/main/res/layout/fragment_seccion1.xml
@@ -1,14 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Todas"
         android:id="@+id/s1_textview"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
@@ -16,4 +15,28 @@
         android:textStyle="bold"
         android:textSize="48dp" />
 
-</RelativeLayout>
+    <TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Mensajeria"
+    android:textSize="30dp"
+    android:layout_marginTop="110dp"
+    android:layout_marginLeft="10dp"
+    android:fontFamily="serif"/>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:id="@+id/WhatsApp"
+        android:layout_marginTop="0dp"
+        android:background="@drawable/whatsapp"
+        android:onClick="CursosMensajeria"/>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:id="@+id/MensajesTexto"
+        android:layout_marginTop="9dp"
+        android:background="@drawable/mensajes"
+        android:onClick="CursosMensajeria"/>
+ </LinearLayout>
