--- a/Proyecto/app/src/main/res/layout/fragment_seccion2.xml
+++ b/Proyecto/app/src/main/res/layout/fragment_seccion2.xml
@@ -1,19 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Recomendadas"
-        android:id="@+id/s2_textview"
+        android:id="@+id/s1_textview"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:textColor="@color/material_grey_600"
         android:textStyle="bold"
         android:textSize="48dp" />
 
-</RelativeLayout>
+</LinearLayout>
