--- a/Proyecto/app/src/main/res/layout/fragment_seccion1.xml
+++ b/Proyecto/app/src/main/res/layout/fragment_seccion1.xml
@@ -1,8 +1,13 @@
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <LinearLayout
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    android:orientation="vertical">
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -11,32 +16,80 @@
         android:id="@+id/s1_textview"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/material_grey_600"
         android:textStyle="bold"
         android:textSize="48dp" />
 
+
     <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Mensajeria"
-    android:textSize="30dp"
-    android:layout_marginTop="40dp"
-    android:layout_marginLeft="10dp"
-    android:fontFamily="serif"/>
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="serif"
+        android:text="Mensajeria"
+        android:textSize="30dp" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:id="@+id/WhatsApp"
         android:layout_marginTop="2dp"
-        android:background="@drawable/whatsapp"
+        android:background="@drawable/imageneswppok"
+        android:onClick="CursosMensajeria" />
+
+    <ImageButton
+    android:layout_width="wrap_content"
+    android:layout_height="50dp"
+    android:id="@+id/MensajesTexto"
+    android:layout_marginTop="9dp"
+    android:background="@drawable/mensajeriaok"
+    android:onClick="CursosMensajeria"/>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:id="@+id/Facebook"
+        android:layout_marginTop="9dp"
+        android:background="@drawable/imagenesfacebookmsgok"
+        android:onClick="CursosMensajeria"/>
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Redes Sociales"
+        android:textSize="30dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="10dp"
+        android:fontFamily="serif"/>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:id="@+id/WhatsApp1"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/imageneswppok"
         android:onClick="CursosMensajeria"/>
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:id="@+id/MensajesTexto"
+        android:id="@+id/MensajesTexto1"
         android:layout_marginTop="9dp"
-        android:background="@drawable/mensajes"
+        android:background="@drawable/mensajeriaok"
         android:onClick="CursosMensajeria"/>
- </LinearLayout>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:id="@+id/Facebook1"
+        android:layout_marginTop="9dp"
+        android:background="@drawable/imagenesfacebookmsgok"
+        android:onClick="CursosMensajeria"/>
+
+
+
+</LinearLayout>
+
+    </ScrollView>
