--- a/Proyecto/app/src/main/res/values/colors.xml
+++ b/Proyecto/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="primary">#2196F3</color>
     <color name="primary_dark">#1976D2</color>
     <color name="primary_light">#BBDEFB</color>
-    <color name="accent">#cddc39</color>
+    <color name="accent">#607D8B</color>
     <color name="primary_text">#212121</color>
-    <color name="secondary_text">#727272</color>
+    <color name="secondary_text">#757575</color>
     <color name="icons">#FFFFFF</color>
-    <color name="divider">#B6B6B6</color>
+    <color name="divider">#BDBDBD</color>
 </resources>
